# Rest-Framework

./: CMakeLists.txt  README.md
Framework/: CMakeLists.txt  Source.cpp  sources.cmake
Framework/HttpFsm/: HttpAuxiliary.h  HttpFsmContext.cpp  HttpFsmContext.h  HttpFsmStateIFace.h  HttpFsmStatesCreator.h  HttpRequestResponse.h  StateExecuteDBTransaction.h  StateFillDBRequest.h  StateParseHttpReq.h  StateSendHttpResponse.h
Framework/PgConnection/: PgBackend.cpp  PgBackend.h  PgConnection.cpp  PgConnection.h  PgConnectionTypes.h  PgConnectionWrapper.h
Framework/TcpServer/: TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h
UnitTests/: CMakeLists.txt  HttpFsmTests.cpp  sources.cmake
